--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "KiCad_Library"]
 	path = KiCad_Library
 	url = https://github.com/ut-ras/KiCad_Library.git
-	branch = main
+	branch = supercap_components
 	update = checkout
